Integrate the GRU as CasAdi model and developed the MPC using Acados to solve the optimization problem - integrate the acados based MPC in my current code

--- a/deepc/DeepcTest.ipynb
+++ b/deepc/DeepcTest.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9ddab3be",
    "metadata": {},
    "outputs": [
@@ -131,13 +131,29 @@
     "\n",
     "from utils import *\n",
     "\n",
-    "# ─── LOAD DATA FOR DeePC ───────────────────────────────────────────────\n",
-    "xlsx_path=\"PWMDynoSpeedNewsMCT.xlsx\"\n",
-    "seq_len = 50\n",
-    "ds = MultiSheetTimeSeriesDataset(xlsx_path, seq_len, normalize=True, cache_path=\"save/timeseries_dataset0527.npz\")\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fcfc34a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pyTorch_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01ml4casadi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01ml4c\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m l4c_model \u001b[38;5;241m=\u001b[39m l4c\u001b[38;5;241m.\u001b[39mL4CasADi(\u001b[43mpyTorch_model\u001b[49m, device\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pyTorch_model' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -279,6 +295,356 @@
     "\n",
     "u0 = control_step(u_ini_meas, y_ini_meas, r_traj.flatten())\n",
     "print(\"apply u0 =\", u0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9858fce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from acados_template import AcadosQp, AcadosQpSolver\n",
+    "from typing import Tuple, Optional\n",
+    "\n",
+    "class DeePCAcados:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        u_data: np.ndarray,\n",
+    "        y_data: np.ndarray,\n",
+    "        Tini: int,\n",
+    "        horizon: int,\n",
+    "        Q: np.ndarray,\n",
+    "        R: np.ndarray,\n",
+    "        u_bounds: Tuple[float, float],\n",
+    "        y_bounds: Tuple[float, float],\n",
+    "        lambda_g: float = 0.0,\n",
+    "        lambda_u: float = 0.0,\n",
+    "        lambda_y: float = 0.0,\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        :param u_data:    offline input data, shape (T, m)\n",
+    "        :param y_data:    offline output data, shape (T, p)\n",
+    "        :param Tini:      past window size\n",
+    "        :param horizon:   prediction horizon N\n",
+    "        :param Q:         (p×p) output‐error weight\n",
+    "        :param R:         (m×m) input‐effort weight\n",
+    "        :param u_bounds:  (u_min, u_max)\n",
+    "        :param y_bounds:  (y_min, y_max)\n",
+    "        :param lambda_g:  ℓ₁ penalty on g\n",
+    "        :param lambda_u:  ℓ₁ penalty on slack_u\n",
+    "        :param lambda_y:  ℓ₁ penalty on slack_y\n",
+    "        \"\"\"\n",
+    "        # save dims & regularizers\n",
+    "        self.u_data, self.y_data = u_data, y_data\n",
+    "        self.T, self.m = u_data.shape\n",
+    "        _, self.p = y_data.shape\n",
+    "        self.Tini, self.N = Tini, horizon\n",
+    "        self.Q, self.R = Q, R\n",
+    "        self.u_min, self.u_max = u_bounds\n",
+    "        self.y_min, self.y_max = y_bounds\n",
+    "        self.lg, self.lu, self.ly = lambda_g, lambda_u, lambda_y\n",
+    "\n",
+    "        # split data into Hankel blocks\n",
+    "        Lg = self.T - (Tini + horizon) + 1\n",
+    "        def hankel(X, rows):\n",
+    "            # builds block‐Hankel: rows blocks of X, each of length Lg\n",
+    "            return np.vstack([X[i:i+Lg].reshape(-1, Lg, order='F')\n",
+    "                              for i in range(rows)])\n",
+    "        Z_u = hankel(u_data, Tini + horizon)  # shape ((Tini+N)*m, Lg)\n",
+    "        Z_y = hankel(y_data, Tini + horizon)  # shape ((Tini+N)*p, Lg)\n",
+    "\n",
+    "        # partition Up,Yp,Uf,Yf\n",
+    "        self.Up = Z_u[:m*Tini    , :]\n",
+    "        self.Uf = Z_u[m*Tini:     , :]\n",
+    "        self.Yp = Z_y[:p*Tini    , :]\n",
+    "        self.Yf = Z_y[p*Tini:     , :]\n",
+    "\n",
+    "        # total QP dimension\n",
+    "        self.Lg = Lg\n",
+    "        self.n_u = m * horizon\n",
+    "        self.n_y = p * horizon\n",
+    "        self.n_su = m * Tini\n",
+    "        self.n_sy = p * Tini\n",
+    "        self.nz = Lg + self.n_u + self.n_y + self.n_su + self.n_sy\n",
+    "        self._build_acados_qp()\n",
+    "\n",
+    "    def _build_acados_qp(self):\n",
+    "        # 1) Hessian H\n",
+    "        H = np.zeros((self.nz, self.nz))\n",
+    "        # ‖g‖₁ ≈ linear term, but here we use ℓ₂ to keep QP: approx ℓ₁→ℓ₂\n",
+    "        H[:self.Lg, :self.Lg] = self.lg * np.eye(self.Lg)\n",
+    "        # R on u‐blocks, Q on y‐blocks\n",
+    "        for k in range(self.N):\n",
+    "            iu = self.Lg + k*self.m\n",
+    "            jy = self.Lg + self.n_u + k*self.p\n",
+    "            H[iu:iu+self.m, iu:iu+self.m] = self.R\n",
+    "            H[jy:jy+self.p, jy:jy+self.p] = self.Q\n",
+    "        # slack penalties\n",
+    "        off_su = self.Lg + self.n_u + self.n_y\n",
+    "        H[off_su:off_su+self.n_su, off_su:off_su+self.n_su] = self.lu * np.eye(self.n_su)\n",
+    "        off_sy = off_su + self.n_su\n",
+    "        H[off_sy:off_sy+self.n_sy, off_sy:off_sy+self.n_sy] = self.ly * np.eye(self.n_sy)\n",
+    "\n",
+    "        # 2) gradient g (updated each solve)\n",
+    "        g = np.zeros(self.nz)\n",
+    "\n",
+    "        # 3) equality constraints A_eq z = 0  (we'll push RHS in solve)\n",
+    "        n_eq = self.m*self.Tini + self.p*self.Tini + self.n_u + self.n_y\n",
+    "        A_eq = np.zeros((n_eq, self.nz))\n",
+    "        # Up·g - slack_u = u_ini\n",
+    "        A_eq[0:self.m*self.Tini, :self.Lg] = self.Up\n",
+    "        A_eq[0:self.m*self.Tini, self.Lg+self.n_u+self.n_y:\n",
+    "                                self.Lg+self.n_u+self.n_y+self.n_su] = -np.eye(self.n_su)\n",
+    "        # Yp·g - slack_y = y_ini\n",
+    "        r1 = self.m*self.Tini\n",
+    "        c_sy = self.Lg + self.n_u + self.n_y + self.n_su\n",
+    "        A_eq[r1:r1+self.p*self.Tini, :self.Lg] = self.Yp\n",
+    "        A_eq[r1:r1+self.p*self.Tini, c_sy:c_sy+self.n_sy] = -np.eye(self.n_sy)\n",
+    "        # Uf·g - u = 0\n",
+    "        r2 = r1 + self.p*self.Tini\n",
+    "        A_eq[r2:r2+self.n_u, :self.Lg] = self.Uf\n",
+    "        A_eq[r2:r2+self.n_u, self.Lg:self.Lg+self.n_u] = -np.eye(self.n_u)\n",
+    "        # Yf·g - y = 0\n",
+    "        r3 = r2 + self.n_u\n",
+    "        A_eq[r3:r3+self.n_y, :self.Lg] = self.Yf\n",
+    "        A_eq[r3:r3+self.n_y, self.Lg+self.n_u:self.Lg+self.n_u+self.n_y] = -np.eye(self.n_y)\n",
+    "\n",
+    "        # 4) box bounds on u,y\n",
+    "        zl = -np.inf*np.ones(self.nz)\n",
+    "        zu =  np.inf*np.ones(self.nz)\n",
+    "        # u‐bounds\n",
+    "        for k in range(self.N):\n",
+    "            iu = self.Lg + k*self.m\n",
+    "            zl[iu:iu+self.m] = self.u_min\n",
+    "            zu[iu:iu+self.m] = self.u_max\n",
+    "        # y‐bounds\n",
+    "        for k in range(self.N):\n",
+    "            jy = self.Lg + self.n_u + k*self.p\n",
+    "            zl[jy:jy+self.p] = self.y_min\n",
+    "            zu[jy:jy+self.p] = self.y_max\n",
+    "\n",
+    "        # 5) create acados QP\n",
+    "        qp = AcadosQp()\n",
+    "        qp.solver_options.qp_solver = 'FULL_CONDENSING_HPIPM'\n",
+    "        qp.dims.n      = self.nz\n",
+    "        qp.dims.n_eq   = n_eq\n",
+    "        qp.dims.n_ineq = 0  # no extra linear inequalities\n",
+    "        qp.cost.H      = H\n",
+    "        qp.cost.g      = g\n",
+    "        qp.cost.idx_z  = np.arange(self.nz)\n",
+    "        qp.constraints.A  = A_eq\n",
+    "        qp.constraints.lh = np.zeros(n_eq)\n",
+    "        qp.constraints.uh = np.zeros(n_eq)\n",
+    "        qp.constraints.zl = zl\n",
+    "        qp.constraints.zu = zu\n",
+    "\n",
+    "        # build solver once\n",
+    "        self._solver = AcadosQpSolver(qp)\n",
+    "\n",
+    "    def solve(self,\n",
+    "              u_ini: np.ndarray,\n",
+    "              y_ini: np.ndarray,\n",
+    "              r: np.ndarray\n",
+    "    ) -> np.ndarray:\n",
+    "        \"\"\"\n",
+    "        :param u_ini:  shape (Tini, m)\n",
+    "        :param y_ini:  shape (Tini, p)\n",
+    "        :param r:      reference trajectory, shape (N, p)\n",
+    "        :return u0:    first control move, shape (m,)\n",
+    "        \"\"\"\n",
+    "        # 1) update RHS of eqs: A_eq z = [u_ini; y_ini; 0; 0]\n",
+    "        b_eq = np.hstack([\n",
+    "            u_ini.flatten(),\n",
+    "            y_ini.flatten(),\n",
+    "            np.zeros(self.n_u),\n",
+    "            np.zeros(self.n_y),\n",
+    "        ])\n",
+    "        self._solver.set('constraints.lh', b_eq)\n",
+    "        self._solver.set('constraints.uh', b_eq)\n",
+    "\n",
+    "        # 2) update gradient for reference r: grad_y = -2 Q r_k\n",
+    "        g = np.zeros(self.nz)\n",
+    "        for k in range(self.N):\n",
+    "            idx = self.Lg + self.n_u + k*self.p\n",
+    "            g[idx:idx+self.p] = -2 * (self.Q @ r[k])\n",
+    "        self._solver.set('cost.g', g)\n",
+    "\n",
+    "        # 3) solve and extract\n",
+    "        status = self._solver.solve()\n",
+    "        z_opt = self._solver.get('solution')\n",
+    "        u_opt = z_opt[self.Lg : self.Lg + self.m*self.N]\n",
+    "        return u_opt.reshape(self.N, self.m)[0]   # return only u(0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "868ce975",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ─── LOAD DATA FOR DeePC ───────────────────────────────────────────────\n",
+    "xlsx_path=\"PWMDynoSpeedNewsMCT.xlsx\"\n",
+    "seq_len = 50\n",
+    "ds = MultiSheetTimeSeriesDataset(xlsx_path, seq_len, normalize=True, cache_path=\"save/timeseries_dataset0527.npz\")\n",
+    "\n",
+    "u0 = deepc.solve(u_ini=u_past, y_ini=y_past, r=ref_traj)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a490a53c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from typing import NamedTuple, Tuple, Optional, List, Union\n",
+    "from cvxpy import Expression, Variable, Problem, Parameter\n",
+    "from cvxpy.constraints.constraint import Constraint\n",
+    "from numpy.typing import NDArray\n",
+    "\n",
+    "class OptimizationProblemVariables(NamedTuple):\n",
+    "    \"\"\"\n",
+    "    Class used to store all the variables used in the optimization\n",
+    "    problem\n",
+    "    \"\"\"\n",
+    "    u_ini: Union[Variable, Parameter]\n",
+    "    y_ini: Union[Variable, Parameter]\n",
+    "    u: Union[Variable, Parameter]\n",
+    "    y: Union[Variable, Parameter]\n",
+    "    g: Union[Variable, Parameter]\n",
+    "    slack_y: Union[Variable, Parameter]\n",
+    "    slack_u: Union[Variable, Parameter]\n",
+    "\n",
+    "\n",
+    "class OptimizationProblem(NamedTuple):\n",
+    "    \"\"\"\n",
+    "    Class used to store the elements an optimization problem\n",
+    "    :param problem_variables:   variables of the opt. problem\n",
+    "    :param constraints:         constraints of the problem\n",
+    "    :param objective_function:  objective function\n",
+    "    :param problem:             optimization problem object\n",
+    "    \"\"\"\n",
+    "    variables: OptimizationProblemVariables\n",
+    "    constraints: List[Constraint]\n",
+    "    objective_function: Expression\n",
+    "    problem: Problem\n",
+    "\n",
+    "class Data(NamedTuple):\n",
+    "    \"\"\"\n",
+    "    Tuple that contains input/output data\n",
+    "    :param u: input data\n",
+    "    :param y: output data\n",
+    "    \"\"\"\n",
+    "    u: NDArray[np.float64]\n",
+    "    y: NDArray[np.float64]\n",
+    "\n",
+    "\n",
+    "def create_hankel_matrix(data: NDArray[np.float64], order: int) -> NDArray[np.float64]:\n",
+    "    \"\"\"\n",
+    "    Create an Hankel matrix of order L from a given matrix of size TxM,\n",
+    "    where M is the number of features and T is the batch size.\n",
+    "    Note that we need L <= T.\n",
+    "\n",
+    "    :param data:  A matrix of data (size TxM). \n",
+    "                  T is the batch size and M is the number of features\n",
+    "    :param order: The order of the Hankel matrix (L)\n",
+    "    :return:      The Hankel matrix of type np.ndarray\n",
+    "    \"\"\"\n",
+    "    data = np.array(data)\n",
+    "    \n",
+    "    assert len(data.shape) == 2, \"Data needs to be a matrix\"\n",
+    "\n",
+    "    T, M = data.shape\n",
+    "    assert T >= order and order > 0, \"The number of data points needs to be larger than the order\"\n",
+    "\n",
+    "    H = np.zeros((order * M, (T - order + 1)))\n",
+    "    for idx in range (T - order + 1):\n",
+    "        H[:, idx] = data[idx:idx+order, :].flatten()\n",
+    "    return H\n",
+    "\n",
+    "def split_data(data: Data, Tini: int, horizon: int, explained_variance: Optional[float] = None) -> Tuple[NDArray[np.float64], NDArray[np.float64], NDArray[np.float64], NDArray[np.float64]]:\n",
+    "    \"\"\"\n",
+    "    Utility function used to split the data into past data and future data.\n",
+    "    Constructs the Hankel matrix for the input/output data, and uses the first\n",
+    "    Tini rows to create the past data, and the last 'horizon' rows to create\n",
+    "    the future data.\n",
+    "    For more info check eq. (4) in https://arxiv.org/pdf/1811.05890.pdf\n",
+    "\n",
+    "    :param data:                A tuple of input/output data. Data should have shape TxM\n",
+    "                                where T is the batch size and M is the number of features\n",
+    "    :param Tini:                number of samples needed to estimate initial conditions\n",
+    "    :param horizon:             horizon\n",
+    "    :param explained_variance:  Regularization term in (0,1] used to approximate the Hankel matrices.\n",
+    "                                By default is None (no low-rank approximation is performed).\n",
+    "    :return:                    Returns Up,Uf,Yp,Yf (see eq. (4) of the original DeePC paper)\n",
+    "    \"\"\"\n",
+    "    assert Tini >= 1, \"Tini cannot be lower than 1\"\n",
+    "    assert horizon >= 1, \"Horizon cannot be lower than 1\"\n",
+    "    assert explained_variance is None or 0 < explained_variance <= 1, \"explained_variance should be in (0,1] or be none\"\n",
+    " \n",
+    "    Mu, My = data.u.shape[1], data.y.shape[1]\n",
+    "    Hu = create_hankel_matrix(data.u, Tini + horizon)\n",
+    "    Hy = create_hankel_matrix(data.y, Tini + horizon)\n",
+    "\n",
+    "    if explained_variance is not None:\n",
+    "        Hu = low_rank_matrix_approximation(Hu, explained_var=explained_variance)\n",
+    "        Hy = low_rank_matrix_approximation(Hy, explained_var=explained_variance)\n",
+    "\n",
+    "    Up, Uf = Hu[:Tini * Mu], Hu[-horizon * Mu:]\n",
+    "    Yp, Yf = Hy[:Tini * My], Hy[-horizon * My:]\n",
+    "    \n",
+    "    return Up, Uf, Yp, Yf\n",
+    "\n",
+    "def low_rank_matrix_approximation(\n",
+    "        X:NDArray[np.float64],\n",
+    "        explained_var: Optional[float] = 0.9,\n",
+    "        rank: Optional[int] = None,\n",
+    "        SVD: Optional[Tuple[NDArray[np.float64], NDArray[np.float64], NDArray[np.float64]]] = None,\n",
+    "        **svd_kwargs) -> NDArray[np.float64]:\n",
+    "    \"\"\"\n",
+    "    Computes an low-rank approximation of a matrix\n",
+    "\n",
+    "    Adapted from https://gist.github.com/thearn/5424219\n",
+    "\n",
+    "    :param X:               matrix to approximate\n",
+    "    :param explained_var:   Value in (0,1] used to compute the rank. Describes how close \n",
+    "                            the low rank matrix is to the original matrix (in terms of the\n",
+    "                            singular values). Default value: 0.9\n",
+    "    :param rank:            rank order. To be used if you want to approximate the matrix by a specific\n",
+    "                            rank. By default is None. If different than None, then it will override the\n",
+    "                            explained_var parameter.\n",
+    "    :param SVD:             If not none, it should be the SVD decomposition (see numpy.linalg.svd) of X\n",
+    "    :param **svd_kwargs:    additional parameters to be passed to numpy.linalg.svd\n",
+    "    :return: the low rank approximation of X\n",
+    "    \"\"\"\n",
+    "    assert len(X.shape) == 2, \"X must be a matrix\"\n",
+    "    assert isinstance(rank, tuple([int, float])) or isinstance(explained_var, tuple([int, float])), \\\n",
+    "        \"You need to specify explained_var or rank!\"\n",
+    "    assert explained_var is None or explained_var <= 1. and explained_var > 0, \\\n",
+    "        \"explained_var must be in (0,1]\"\n",
+    "    assert rank is None or (rank >= 1 and rank <= min(X.shape[0], X.shape[1])), \\\n",
+    "        \"Rank cannot be lower than 1 or greater than min(num_rows, num_cols)\"\n",
+    "    assert SVD is None or len(SVD) == 3, \"SVD must be a tuple of 3 elements\"\n",
+    "\n",
+    "    u, s, v = np.linalg.svd(X, full_matrices=False, **svd_kwargs) if not SVD else SVD\n",
+    "\n",
+    "    if rank is None:\n",
+    "        s_squared = np.power(s, 2)\n",
+    "        total_var = np.sum(s_squared)\n",
+    "        z = np.cumsum(s_squared) / total_var\n",
+    "        rank = np.argmax(np.logical_or(z > explained_var, np.isclose(z, explained_var)))\n",
+    "\n",
+    "    u_low = u[:,:rank]\n",
+    "    s_low = s[:rank]\n",
+    "    v_low = v[:rank,:]\n",
+    "\n",
+    "    X_low = np.dot(u_low * s_low, v_low)\n",
+    "    return X_low\n"
    ]
   }
  ],
