DeePC code update, at stage where only solver/ineq_cons needed to be figured out. Cleaned out the DeePCController.py for promising use.

--- a/deepc/0624/0624Dev.ipynb
+++ b/deepc/0624/0624Dev.ipynb
@@ -197,8 +197,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5411a11e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5, 0. , 0. , ..., 0. , 0. , 0. ],\n",
+       "       [0. , 0.5, 0. , ..., 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0.5, ..., 0. , 0. , 0. ],\n",
+       "       ...,\n",
+       "       [0. , 0. , 0. , ..., 0.5, 0. , 0. ],\n",
+       "       [0. , 0. , 0. , ..., 0. , 0.5, 0. ],\n",
+       "       [0. , 0. , 0. , ..., 0. , 0. , 0.5]], shape=(50, 50))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "Q = np.diag(np.tile([0.5], 50))\n",
+    "Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a15ced17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b6dfdaf",
    "metadata": {},
    "outputs": [],
    "source": []
