In the controller.py, added the feature where updating hankel matrix locally with small size at run time. Next, modifying the deeptools class to parameterize all the matrix as casadi representation and implement acados.

--- a/deepc/DeepcTest.ipynb
+++ b/deepc/DeepcTest.ipynb
@@ -646,6 +646,249 @@
     "    X_low = np.dot(u_low * s_low, v_low)\n",
     "    return X_low\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7e34527a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.optim.lr_scheduler import StepLR, ReduceLROnPlateau\n",
+    "import torch.optim as optim\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "import os\n",
+    "os.environ[\"KMP_DUPLICATE_LIB_OK\"] = \"TRUE\"\n",
+    "import time\n",
+    "from datetime import datetime\n",
+    "import threading\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import numpy as np\n",
+    "import scipy.io as sio\n",
+    "import pandas as pd\n",
+    "\n",
+    "import Jetson.GPIO as GPIO\n",
+    "GPIO.cleanup()\n",
+    "\n",
+    "import board\n",
+    "import busio\n",
+    "from adafruit_pca9685 import PCA9685\n",
+    "\n",
+    "import cantools\n",
+    "import can\n",
+    "import casadi as ca\n",
+    "from acados_template import AcadosOcp, AcadosOcpSolver\n",
+    "def hankel(x, L):\n",
+    "    \"\"\"\n",
+    "        ------Construct Hankel matrix------\n",
+    "        x: data sequence (data_size, x_dim)\n",
+    "        L: row dimension of the hankel matrix\n",
+    "        T: data samples of data x\n",
+    "        return: H(x): hankel matrix of x  H(x): (x_dim*L, T-L+1)\n",
+    "                H(x) = [x(0)   x(1) ... x(T-L)\n",
+    "                        x(1)   x(2) ... x(T-L+1)\n",
+    "                        .       .   .     .\n",
+    "                        .       .     .   .\n",
+    "                        .       .       . .\n",
+    "                        x(L-1) x(L) ... x(T-1)]\n",
+    "                Hankel matrix of order L has size:  (x_dim*L, T-L+1)\n",
+    "    \"\"\"\n",
+    "    if not isinstance(x, np.ndarray):\n",
+    "        x = np.array(x)\n",
+    "\n",
+    "    T, x_dim = x.shape\n",
+    "\n",
+    "    Hx = np.zeros((L * x_dim, T - L + 1))\n",
+    "    for i in range(L):\n",
+    "        Hx[i * x_dim:(i + 1) * x_dim, :] = x[i:i + T - L + 1, :].T  # x need transpose to fit the hankel dimension\n",
+    "    return Hx\n",
+    "\n",
+    "def hankel_full(ud, yd, Tini, THorizon):\n",
+    "    \"\"\"\n",
+    "    Build the full DeePC Hankel matrix once by stacking past and future blocks.\n",
+    "\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    ud : array_like, shape (T_data, u_dim)\n",
+    "        Historical input sequence.\n",
+    "    yd : array_like, shape (T_data, y_dim)\n",
+    "        Historical output sequence.\n",
+    "    Tini : int\n",
+    "        Number of past (initialization) steps.\n",
+    "    THorizon : int\n",
+    "        Prediction horizon (number of future steps).\n",
+    "\n",
+    "    Returns:\n",
+    "    --------\n",
+    "    hankel_full_mtx : np.ndarray, shape ((u_dim + y_dim) * (Tini + THorizon), K)\n",
+    "        A stacked Hankel matrix containing:\n",
+    "            [ Up;  # past-input block\n",
+    "              Yp;  # past-output block\n",
+    "              Uf;  # future-input block\n",
+    "              Yf ] # future-output block\n",
+    "        where K = T_data - (Tini + THorizon) + 1 is the total number of columns. (Large number)\n",
+    "    \"\"\"\n",
+    "    # Build block-Hankel for inputs and outputs\n",
+    "    Hud = hankel(ud, Tini + THorizon)\n",
+    "    Huy = hankel(yd, Tini + THorizon)\n",
+    "\n",
+    "    u_dim = ud.shape[1]\n",
+    "    y_dim = yd.shape[1]\n",
+    "\n",
+    "    # Slice into past (first Tini) and future (last THorizon)\n",
+    "    Up = Hud[: u_dim * Tini, :]\n",
+    "    Uf = Hud[u_dim * Tini : u_dim * (Tini + THorizon), :]\n",
+    "    Yp = Huy[: y_dim * Tini, :]\n",
+    "    Yf = Huy[y_dim * Tini : y_dim * (Tini + THorizon), :]\n",
+    "    print(f\"Hankel full matrix with shape: Up{Up.shape}, Uf{Uf.shape},Yp{Yp.shape},Yf{Yf.shape}\")\n",
+    "    return Up, Uf, Yp, Yf\n",
+    "\n",
+    "\n",
+    "def hankel_subBlocks(Up, Uf, Yp, Yf, Tini, THorizon, hankel_subB_size, hankel_idx):\n",
+    "    g_dim = hankel_subB_size - Tini - THorizon + 1\n",
+    "    Up_cur = Up[:Tini,         hankel_idx-g_dim:hankel_idx+g_dim]\n",
+    "    Uf_cur = Uf[:Tini,         hankel_idx-g_dim:hankel_idx+g_dim]\n",
+    "    Yp_cur = Yp[:THorizon, hankel_idx-g_dim:hankel_idx+g_dim]\n",
+    "    Yf_cur = Yf[:THorizon, hankel_idx-g_dim:hankel_idx+g_dim]\n",
+    "    return Up_cur, Uf_cur, Yp_cur, Yf_cur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ffa844d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hankel_subBlocks(Up, Uf, Yp, Yf, Tini, THorizon, hankel_subB_size, hankel_idx):\n",
+    "    # how many columns on each side of hankel_idx we want\n",
+    "    g_dim = hankel_subB_size - Tini - THorizon + 1\n",
+    "\n",
+    "    # desired slice is [start:end] with width = end - start = 2*g_dim\n",
+    "    start = hankel_idx - g_dim\n",
+    "    end   = hankel_idx + g_dim\n",
+    "    width = end - start\n",
+    "\n",
+    "    # allocate zero‐padded output blocks\n",
+    "    Up_cur = np.zeros((Tini,            width), dtype=Up.dtype)\n",
+    "    Uf_cur = np.zeros((Tini,            width), dtype=Uf.dtype)\n",
+    "    Yp_cur = np.zeros((THorizon, width), dtype=Yp.dtype)\n",
+    "    Yf_cur = np.zeros((THorizon, width), dtype=Yf.dtype)\n",
+    "\n",
+    "    # clamp source columns to [0, max_col)\n",
+    "    max_col = Up.shape[1]\n",
+    "    src_start = max(start,               0)\n",
+    "    src_end   = min(end,   max_col)\n",
+    "\n",
+    "    # where in the padded block these columns should go\n",
+    "    dst_start = src_start - start        # if start<0, dst_start>0\n",
+    "    dst_end   = dst_start + (src_end - src_start)\n",
+    "\n",
+    "    # copy the in-bounds slice into the zero blocks\n",
+    "    Up_cur[:,      dst_start:dst_end] = Up[:Tini,         src_start:src_end]\n",
+    "    Uf_cur[:,      dst_start:dst_end] = Uf[:Tini,         src_start:src_end]\n",
+    "    Yp_cur[:,      dst_start:dst_end] = Yp[:THorizon,     src_start:src_end]\n",
+    "    Yf_cur[:,      dst_start:dst_end] = Yf[:THorizon,     src_start:src_end]\n",
+    "\n",
+    "    return Up_cur, Uf_cur, Yp_cur, Yf_cur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fd90c763",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hankel full matrix with shape: Up(50, 179902), Uf(50, 179902),Yp(50, 179902),Yf(50, 179902)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.        , 0.        , 0.        , ..., 0.30824149, 0.31320107,\n",
+       "         0.3182672 ],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.31320107, 0.3182672 ,\n",
+       "         0.32320421],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.3182672 , 0.32320421,\n",
+       "         0.33562195],\n",
+       "        ...,\n",
+       "        [0.        , 0.        , 0.        , ..., 1.16128739, 1.20627288,\n",
+       "         1.25085105],\n",
+       "        [0.        , 0.        , 0.        , ..., 1.20627288, 1.25085105,\n",
+       "         1.29533237],\n",
+       "        [0.        , 0.        , 0.        , ..., 1.25085105, 1.29533237,\n",
+       "         1.34078059]], shape=(50, 200)),\n",
+       " array([[0.        , 0.        , 0.        , ..., 1.29533237, 1.34078059,\n",
+       "         1.38524   ],\n",
+       "        [0.        , 0.        , 0.        , ..., 1.34078059, 1.38524   ,\n",
+       "         1.42988851],\n",
+       "        [0.        , 0.        , 0.        , ..., 1.38524   , 1.42988851,\n",
+       "         1.47458422],\n",
+       "        ...,\n",
+       "        [0.        , 0.        , 0.        , ..., 2.70138542, 2.71709686,\n",
+       "         2.73198446],\n",
+       "        [0.        , 0.        , 0.        , ..., 2.71709686, 2.73198446,\n",
+       "         2.74675841],\n",
+       "        [0.        , 0.        , 0.        , ..., 2.73198446, 2.74675841,\n",
+       "         2.75936668]], shape=(50, 200)),\n",
+       " array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]], shape=(50, 200)),\n",
+       " array([[0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "         0.        ],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "         0.        ],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "         0.        ],\n",
+       "        ...,\n",
+       "        [0.        , 0.        , 0.        , ..., 0.1125229 , 0.11731825,\n",
+       "         0.12221129],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.11731825, 0.12221129,\n",
+       "         0.1271247 ],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.12221129, 0.1271247 ,\n",
+       "         0.13239403]], shape=(50, 200)))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PROJECT_DIR = Path().resolve() \n",
+    "DATA_DIR   = PROJECT_DIR / \"dataForHankle\" / \"smallDataSet\"\n",
+    "CACHE_FILE_HANKEL_DATA = os.path.join(DATA_DIR, \"hankel_matrix.npz\")         \n",
+    "npz_hankel = np.load(CACHE_FILE_HANKEL_DATA)\n",
+    "hankel_full_mtx = npz_hankel['hankel_full_mtx']\n",
+    "CACHE_FILE_Ori_DATA = os.path.join(DATA_DIR, \"hankel_dataset.npz\")   \n",
+    "npz = np.load(CACHE_FILE_Ori_DATA)\n",
+    "ud, yd = npz['ud'], npz['yd']\n",
+    "Up, Uf, Yp, Yf = hankel_full(ud, yd, 50, 50)\n",
+    "\n",
+    "hankel_subBlocks(Up, Uf, Yp, Yf, 50, 50, 199, 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1102e09b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
