--- a/script/PWMTest.ipynb
+++ b/script/PWMTest.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "90397c98",
    "metadata": {},
    "outputs": [
@@ -78,19 +78,76 @@
       "Channel 0 duty: 15%\n",
       "Channel 0 duty: 10%\n",
       "Channel 0 duty: 5%\n",
-      "Channel 0 duty: 0%\n"
+      "Channel 0 duty: 0%\n",
+      "Channel 0 duty: 0%\n",
+      "Channel 0 duty: 5%\n",
+      "Channel 0 duty: 10%\n",
+      "Channel 0 duty: 15%\n",
+      "Channel 0 duty: 20%\n",
+      "Channel 0 duty: 25%\n",
+      "Channel 0 duty: 30%\n",
+      "Channel 0 duty: 35%\n",
+      "Channel 0 duty: 40%\n",
+      "Channel 0 duty: 45%\n",
+      "Channel 0 duty: 50%\n",
+      "Channel 0 duty: 55%\n",
+      "Channel 0 duty: 60%\n",
+      "Channel 0 duty: 65%\n",
+      "Channel 0 duty: 70%\n",
+      "Channel 0 duty: 75%\n",
+      "Channel 0 duty: 80%\n",
+      "Channel 0 duty: 85%\n",
+      "Channel 0 duty: 90%\n",
+      "Channel 0 duty: 95%\n",
+      "Channel 0 duty: 100%\n",
+      "Channel 0 duty: 100%\n",
+      "Channel 0 duty: 95%\n",
+      "Channel 0 duty: 90%\n",
+      "Channel 0 duty: 85%\n",
+      "Channel 0 duty: 80%\n",
+      "Channel 0 duty: 75%\n",
+      "Channel 0 duty: 70%\n",
+      "Channel 0 duty: 65%\n",
+      "Channel 0 duty: 60%\n",
+      "Channel 0 duty: 55%\n",
+      "Channel 0 duty: 50%\n",
+      "Channel 0 duty: 45%\n",
+      "Channel 0 duty: 40%\n",
+      "Channel 0 duty: 35%\n",
+      "Channel 0 duty: 30%\n",
+      "Channel 0 duty: 25%\n",
+      "Channel 0 duty: 20%\n",
+      "Channel 0 duty: 15%\n",
+      "Channel 0 duty: 10%\n",
+      "Channel 0 duty: 5%\n",
+      "Channel 0 duty: 0%\n",
+      "Channel 0 duty: 0%\n",
+      "Channel 0 duty: 5%\n",
+      "Channel 0 duty: 10%\n",
+      "Channel 0 duty: 15%\n",
+      "Channel 0 duty: 20%\n",
+      "Channel 0 duty: 25%\n",
+      "Channel 0 duty: 30%\n",
+      "Channel 0 duty: 35%\n",
+      "Channel 0 duty: 40%\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "percent must be between 0.0 and 100.0",
+     "ename": "OSError",
+     "evalue": "[Errno 121] Remote I/O error",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 45\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m# Ramp back down\u001b[39;00m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m dc \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m---> 45\u001b[0m     \u001b[43mset_duty\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     46\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChannel 0 duty: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdc\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     47\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m2\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[2], line 26\u001b[0m, in \u001b[0;36mset_duty\u001b[0;34m(channel, percent)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;124;03mchannel: 0–15\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;124;03mpercent: 0.0 to 100.0 (percentage of full on)\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;241m0\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m percent \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m):\n\u001b[0;32m---> 26\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpercent must be between 0.0 and 100.0\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# PCA9685 uses 12-bit internally but busdevice scales it to 16-bit.\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# 0 = always off, 0xFFFF = always on. Linear interpolation for duty.\u001b[39;00m\n\u001b[1;32m     29\u001b[0m duty_16bit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(percent \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m65535\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m100\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: percent must be between 0.0 and 100.0"
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 40\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;66;03m# set_duty(0, dc)\u001b[39;00m\n\u001b[1;32m     37\u001b[0m     \u001b[38;5;66;03m# print(f\"Channel 0 duty: {dc}%\")\u001b[39;00m\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;66;03m# Ramp from 0 → 100 in 5% steps\u001b[39;00m\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m dc \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m101\u001b[39m, \u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m---> 40\u001b[0m         \u001b[43mset_duty\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     41\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChannel 0 duty: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdc\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     42\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m2\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[4], line 30\u001b[0m, in \u001b[0;36mset_duty\u001b[0;34m(channel, percent)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# PCA9685 uses 12-bit internally but busdevice scales it to 16-bit.\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# 0 = always off, 0xFFFF = always on. Linear interpolation for duty.\u001b[39;00m\n\u001b[1;32m     29\u001b[0m duty_16bit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(percent \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m65535\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m100\u001b[39m)\n\u001b[0;32m---> 30\u001b[0m \u001b[43mpca\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchannels\u001b[49m\u001b[43m[\u001b[49m\u001b[43mchannel\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mduty_cycle\u001b[49m \u001b[38;5;241m=\u001b[39m duty_16bit\n",
+      "File \u001b[0;32m~/miniforge3/envs/myenv/lib/python3.10/site-packages/adafruit_pca9685.py:102\u001b[0m, in \u001b[0;36mPWMChannel.duty_cycle\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m     99\u001b[0m value \u001b[38;5;241m=\u001b[39m value \u001b[38;5;241m>>\u001b[39m \u001b[38;5;241m4\u001b[39m\n\u001b[1;32m    100\u001b[0m \u001b[38;5;66;03m# value should never be zero here because of the test for the \"fully off\" case\u001b[39;00m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;66;03m# (the LEDn_ON and LEDn_OFF registers should never be set with the same values)\u001b[39;00m\n\u001b[0;32m--> 102\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_pca\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpwm_regs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_index\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m0\u001b[39m, value)\n",
+      "File \u001b[0;32m~/miniforge3/envs/myenv/lib/python3.10/site-packages/adafruit_register/i2c_struct_array.py:70\u001b[0m, in \u001b[0;36m_BoundStructArray.__setitem__\u001b[0;34m(self, index, value)\u001b[0m\n\u001b[1;32m     68\u001b[0m struct\u001b[38;5;241m.\u001b[39mpack_into(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mformat, buf, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m*\u001b[39mvalue)\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39mi2c_device \u001b[38;5;28;01mas\u001b[39;00m i2c:\n\u001b[0;32m---> 70\u001b[0m     \u001b[43mi2c\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbuf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniforge3/envs/myenv/lib/python3.10/site-packages/adafruit_bus_device/i2c_device.py:96\u001b[0m, in \u001b[0;36mI2CDevice.write\u001b[0;34m(self, buf, start, end)\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     95\u001b[0m     end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(buf)\n\u001b[0;32m---> 96\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mi2c\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwriteto\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice_address\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbuf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstart\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniforge3/envs/myenv/lib/python3.10/site-packages/busio.py:216\u001b[0m, in \u001b[0;36mI2C.writeto\u001b[0;34m(self, address, buffer, start, end)\u001b[0m\n\u001b[1;32m    214\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    215\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_i2c\u001b[38;5;241m.\u001b[39mwriteto(address, \u001b[38;5;28mmemoryview\u001b[39m(buffer)[start:], stop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m--> 216\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_i2c\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwriteto\u001b[49m\u001b[43m(\u001b[49m\u001b[43maddress\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mmemoryview\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mbuffer\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[43mstart\u001b[49m\u001b[43m:\u001b[49m\u001b[43mend\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstop\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    217\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_i2c\u001b[38;5;241m.\u001b[39mwriteto(address, buffer, stop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/miniforge3/envs/myenv/lib/python3.10/site-packages/adafruit_blinka/microcontroller/generic_linux/i2c.py:60\u001b[0m, in \u001b[0;36mI2C.writeto\u001b[0;34m(self, address, buffer, start, end, stop)\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     59\u001b[0m     end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(buffer)\n\u001b[0;32m---> 60\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_i2c_bus\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite_bytes\u001b[49m\u001b[43m(\u001b[49m\u001b[43maddress\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbuffer\u001b[49m\u001b[43m[\u001b[49m\u001b[43mstart\u001b[49m\u001b[43m:\u001b[49m\u001b[43mend\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniforge3/envs/myenv/lib/python3.10/site-packages/Adafruit_PureIO/smbus.py:303\u001b[0m, in \u001b[0;36mSMBus.write_bytes\u001b[0;34m(self, addr, buf)\u001b[0m\n\u001b[1;32m    299\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m (\n\u001b[1;32m    300\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_device \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    301\u001b[0m ), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBus must be opened before operations are made against it!\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    302\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_select_device(addr)\n\u001b[0;32m--> 303\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_device\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbuf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 121] Remote I/O error"
      ]
     }
    ],
@@ -134,12 +191,12 @@
     "        # print(f\"Channel 0 duty: {dc}%\")\n",
     "        # Ramp from 0 → 100 in 5% steps\n",
     "        for dc in range(0, 101, 5):\n",
-    "            set_duty(0, dc)\n",
+    "            set_duty(3, dc)\n",
     "            print(f\"Channel 0 duty: {dc}%\")\n",
     "            time.sleep(2)\n",
     "        # Ramp back down\n",
     "        for dc in range(100, -1, -5):\n",
-    "            set_duty(0, dc)\n",
+    "            set_duty(3, dc)\n",
     "            print(f\"Channel 0 duty: {dc}%\")\n",
     "            time.sleep(2)\n",
     "except KeyboardInterrupt:\n",
